--- a/stylesheets/exercise-content-package/widgets/radio.less
+++ b/stylesheets/exercise-content-package/widgets/radio.less
@@ -228,6 +228,7 @@ body.sat-section {
             }
 
             .perseus-radio-option-content {
+                display: block;
                 margin-left: 45px;
             }
         }
